--- a/css/new-age.css
+++ b/css/new-age.css
@@ -156,8 +156,8 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/bg-patterkn.png"), #339FFF;
+  background: url("../img/bg-pattekrn.png"), linear-gradient(to left, #339FFF, #33FF5E);
 }
 
 header.masthead .header-content {
